internal/sqlparser/y.output

state 0
	$accept: .root $end 
	root: .    (1)

	SELECT  shift 11
	TABLE  shift 9
	VALUES  shift 8
	WITH  shift 10
	.  reduce 1 (src line 240)

	root  goto 1
	stmt_list  goto 2
	stmt  goto 3
	SelectStmt  goto 4
	simple_select  goto 7
	base_select  goto 5
	with_clause  goto 6

state 1
	$accept:  root.$end 

	$end  accept
	.  error


state 2
	root:  stmt_list.    (2)
	stmt_list:  stmt_list.';' stmt 
	stmt_list:  stmt_list.';' 

	';'  shift 12
	.  reduce 2 (src line 245)


state 3
	stmt_list:  stmt.    (3)

	.  reduce 3 (src line 250)


state 4
	stmt:  SelectStmt.    (6)

	.  reduce 6 (src line 264)


state 5
	SelectStmt:  base_select.setop_tail 
	setop_tail: .    (15)

	EXCEPT  shift 17
	INTERSECT  shift 16
	UNION  shift 15
	.  reduce 15 (src line 358)

	setop_tail  goto 13
	setop_op  goto 14

state 6
	SelectStmt:  with_clause.base_select setop_tail 

	SELECT  shift 11
	TABLE  shift 9
	VALUES  shift 8
	.  error

	simple_select  goto 7
	base_select  goto 18

state 7
	base_select:  simple_select.opt_sort_clause opt_select_limit 
	opt_sort_clause: .    (29)

	ORDER  shift 20
	.  reduce 29 (src line 458)

	opt_sort_clause  goto 19

state 8
	base_select:  VALUES.VALUES_row VALUES_rows_tail opt_sort_clause opt_select_limit 

	'('  shift 22
	.  error

	VALUES_row  goto 21

state 9
	base_select:  TABLE.qualified_name opt_sort_clause opt_select_limit 

	ABORT_P  shift 28
	ABSENT  shift 29
	ABSOLUTE_P  shift 30
	ACCESS  shift 31
	ACTION  shift 32
	ADD_P  shift 33
	ADMIN  shift 34
	AFTER  shift 35
	AGGREGATE  shift 36
	ALSO  shift 37
	ALTER  shift 38
	ALWAYS  shift 39
	ASENSITIVE  shift 40
	ASSERTION  shift 41
	ASSIGNMENT  shift 42
	AT  shift 43
	ATOMIC  shift 44
	ATTACH  shift 45
	ATTRIBUTE  shift 46
	BACKWARD  shift 47
	BEFORE  shift 48
	BEGIN_P  shift 49
	BETWEEN  shift 358
	BIGINT  shift 359
	BIT  shift 360
	BOOLEAN_P  shift 361
	BREADTH  shift 50
	BY  shift 51
	CACHE  shift 52
	CALL  shift 53
	CALLED  shift 54
	CASCADE  shift 55
	CASCADED  shift 56
	CATALOG_P  shift 57
	CHAIN  shift 58
	CHAR_P  shift 362
	CHARACTER  shift 363
	CHARACTERISTICS  shift 59
	CHECKPOINT  shift 60
	CLASS  shift 61
	CLOSE  shift 62
	CLUSTER  shift 63
	COALESCE  shift 364
	COLUMNS  shift 64
	COMMENT  shift 65
	COMMENTS  shift 66
	COMMIT  shift 67
	COMMITTED  shift 68
	COMPRESSION  shift 69
	CONDITIONAL  shift 70
	CONFIGURATION  shift 71
	CONFLICT  shift 72
	CONNECTION  shift 73
	CONSTRAINTS  shift 74
	CONTENT_P  shift 75
	CONTINUE_P  shift 76
	CONVERSION_P  shift 77
	COPY  shift 78
	COST  shift 79
	CSV  shift 80
	CUBE  shift 81
	CURRENT_P  shift 82
	CURSOR  shift 83
	CYCLE  shift 84
	DATA_P  shift 85
	DATABASE  shift 86
	DAY_P  shift 87
	DEALLOCATE  shift 88
	DEC  shift 365
	DECIMAL_P  shift 366
	DECLARE  shift 89
	DEFAULTS  shift 90
	DEFERRED  shift 91
	DEFINER  shift 92
	DELETE_P  shift 93
	DELIMITER  shift 94
	DELIMITERS  shift 95
	DEPENDS  shift 96
	DEPTH  shift 97
	DETACH  shift 98
	DICTIONARY  shift 99
	DISABLE_P  shift 100
	DISCARD  shift 101
	DOCUMENT_P  shift 102
	DOMAIN_P  shift 103
	DOUBLE_P  shift 104
	DROP  shift 105
	EACH  shift 106
	EMPTY_P  shift 107
	ENABLE_P  shift 108
	ENCODING  shift 109
	ENCRYPTED  shift 110
	ENFORCED  shift 111
	ENUM_P  shift 112
	ERROR_P  shift 113
	ESCAPE  shift 114
	EVENT  shift 115
	EXCLUDE  shift 116
	EXCLUDING  shift 117
	EXCLUSIVE  shift 118
	EXECUTE  shift 119
	EXISTS  shift 367
	EXPLAIN  shift 120
	EXPRESSION  shift 121
	EXTENSION  shift 122
	EXTERNAL  shift 123
	EXTRACT  shift 368
	FAMILY  shift 124
	FILTER  shift 125
	FINALIZE  shift 126
	FIRST_P  shift 127
	FLOAT_P  shift 369
	FOLLOWING  shift 128
	FORCE  shift 129
	FORMAT  shift 130
	FORWARD  shift 131
	FUNCTION  shift 132
	FUNCTIONS  shift 133
	GENERATED  shift 134
	GLOBAL  shift 135
	GRANTED  shift 136
	GREATEST  shift 370
	GROUPING  shift 371
	GROUPS  shift 137
	HANDLER  shift 138
	HEADER_P  shift 139
	HOLD  shift 140
	HOUR_P  shift 141
	IDENTITY_P  shift 142
	IF_P  shift 143
	IMMEDIATE  shift 144
	IMMUTABLE  shift 145
	IMPLICIT_P  shift 146
	IMPORT_P  shift 147
	INCLUDE  shift 148
	INCLUDING  shift 149
	INCREMENT  shift 150
	INDENT  shift 151
	INDEX  shift 152
	INDEXES  shift 153
	INHERIT  shift 154
	INHERITS  shift 155
	INLINE_P  shift 156
	INOUT  shift 372
	INPUT_P  shift 157
	INSENSITIVE  shift 158
	INSERT  shift 159
	INSTEAD  shift 160
	INT_P  shift 373
	INTEGER  shift 374
	INTERVAL  shift 375
	INVOKER  shift 161
	ISOLATION  shift 162
	JSON  shift 376
	JSON_ARRAY  shift 377
	JSON_ARRAYAGG  shift 378
	JSON_EXISTS  shift 379
	JSON_OBJECT  shift 380
	JSON_OBJECTAGG  shift 381
	JSON_QUERY  shift 382
	JSON_SCALAR  shift 383
	JSON_SERIALIZE  shift 384
	JSON_TABLE  shift 385
	JSON_VALUE  shift 386
	KEEP  shift 163
	KEY  shift 164
	KEYS  shift 165
	LABEL  shift 166
	LANGUAGE  shift 167
	LARGE_P  shift 168
	LAST_P  shift 169
	LEAKPROOF  shift 170
	LEAST  shift 387
	LEVEL  shift 171
	LISTEN  shift 172
	LOAD  shift 173
	LOCAL  shift 174
	LOCATION  shift 175
	LOCK_P  shift 176
	LOCKED  shift 177
	LOGGED  shift 178
	MAPPING  shift 179
	MATCH  shift 180
	MATCHED  shift 181
	MATERIALIZED  shift 182
	MAXVALUE  shift 183
	MERGE  shift 184
	MERGE_ACTION  shift 388
	METHOD  shift 185
	MINUTE_P  shift 186
	MINVALUE  shift 187
	MODE  shift 188
	MONTH_P  shift 189
	MOVE  shift 190
	NAME_P  shift 191
	NAMES  shift 192
	NATIONAL  shift 389
	NCHAR  shift 390
	NESTED  shift 193
	NEW  shift 194
	NEXT  shift 195
	NFC  shift 196
	NFD  shift 197
	NFKC  shift 198
	NFKD  shift 199
	NO  shift 200
	NONE  shift 391
	NORMALIZE  shift 392
	NORMALIZED  shift 201
	NOTHING  shift 202
	NOTIFY  shift 203
	NOWAIT  shift 204
	NULLIF  shift 393
	NULLS_P  shift 205
	NUMERIC  shift 394
	OBJECT_P  shift 206
	OBJECTS_P  shift 207
	OF  shift 208
	OFF  shift 209
	OIDS  shift 210
	OLD  shift 211
	OMIT  shift 212
	OPERATOR  shift 213
	OPTION  shift 214
	OPTIONS  shift 215
	ORDINALITY  shift 216
	OTHERS  shift 217
	OUT_P  shift 395
	OVER  shift 218
	OVERLAY  shift 396
	OVERRIDING  shift 219
	OWNED  shift 220
	OWNER  shift 221
	PARALLEL  shift 222
	PARAMETER  shift 223
	PARSER  shift 224
	PARTIAL  shift 225
	PARTITION  shift 226
	PASSING  shift 227
	PASSWORD  shift 228
	PATH  shift 229
	PERIOD  shift 230
	PLAN  shift 231
	PLANS  shift 232
	POLICY  shift 233
	POSITION  shift 397
	PRECEDING  shift 234
	PRECISION  shift 398
	PREPARE  shift 235
	PREPARED  shift 236
	PRESERVE  shift 237
	PRIOR  shift 238
	PRIVILEGES  shift 239
	PROCEDURAL  shift 240
	PROCEDURE  shift 241
	PROCEDURES  shift 242
	PROGRAM  shift 243
	PUBLICATION  shift 244
	QUOTE  shift 245
	QUOTES  shift 246
	RANGE  shift 247
	READ  shift 248
	REAL  shift 399
	REASSIGN  shift 249
	RECURSIVE  shift 250
	REF_P  shift 251
	REFERENCING  shift 252
	REFRESH  shift 253
	REINDEX  shift 254
	RELATIVE_P  shift 255
	RELEASE  shift 256
	RENAME  shift 257
	REPEATABLE  shift 258
	REPLACE  shift 259
	REPLICA  shift 260
	RESET  shift 261
	RESTART  shift 262
	RESTRICT  shift 263
	RETURN  shift 264
	RETURNS  shift 265
	REVOKE  shift 266
	ROLE  shift 267
	ROLLBACK  shift 268
	ROLLUP  shift 269
	ROUTINE  shift 270
	ROUTINES  shift 271
	ROW  shift 400
	ROWS  shift 272
	RULE  shift 273
	SAVEPOINT  shift 274
	SCALAR  shift 275
	SCHEMA  shift 276
	SCHEMAS  shift 277
	SCROLL  shift 278
	SEARCH  shift 279
	SECOND_P  shift 280
	SECURITY  shift 281
	SEQUENCE  shift 282
	SEQUENCES  shift 283
	SERIALIZABLE  shift 284
	SERVER  shift 285
	SESSION  shift 286
	SET  shift 287
	SETOF  shift 401
	SETS  shift 288
	SHARE  shift 289
	SHOW  shift 290
	SIMPLE  shift 291
	SKIP  shift 292
	SMALLINT  shift 402
	SNAPSHOT  shift 293
	SOURCE  shift 294
	SQL_P  shift 295
	STABLE  shift 296
	STANDALONE_P  shift 297
	START  shift 298
	STATEMENT  shift 299
	STATISTICS  shift 300
	STDIN  shift 301
	STDOUT  shift 302
	STORAGE  shift 303
	STORED  shift 304
	STRICT_P  shift 305
	STRING_P  shift 306
	STRIP_P  shift 307
	SUBSCRIPTION  shift 308
	SUBSTRING  shift 403
	SUPPORT  shift 309
	SYSID  shift 310
	SYSTEM_P  shift 311
	TABLES  shift 312
	TABLESPACE  shift 313
	TARGET  shift 314
	TEMP  shift 315
	TEMPLATE  shift 316
	TEMPORARY  shift 317
	TEXT_P  shift 318
	TIES  shift 319
	TIME  shift 404
	TIMESTAMP  shift 405
	TRANSACTION  shift 320
	TRANSFORM  shift 321
	TREAT  shift 406
	TRIGGER  shift 322
	TRIM  shift 407
	TRUNCATE  shift 323
	TRUSTED  shift 324
	TYPE_P  shift 325
	TYPES_P  shift 326
	UESCAPE  shift 327
	UNBOUNDED  shift 328
	UNCOMMITTED  shift 329
	UNCONDITIONAL  shift 330
	UNENCRYPTED  shift 331
	UNKNOWN  shift 332
	UNLISTEN  shift 333
	UNLOGGED  shift 334
	UNTIL  shift 335
	UPDATE  shift 336
	VACUUM  shift 337
	VALID  shift 338
	VALIDATE  shift 339
	VALIDATOR  shift 340
	VALUE_P  shift 341
	VALUES  shift 408
	VARCHAR  shift 409
	VARYING  shift 342
	VERSION_P  shift 343
	VIEW  shift 344
	VIEWS  shift 345
	VIRTUAL  shift 346
	VOLATILE  shift 347
	WHITESPACE_P  shift 348
	WITHIN  shift 349
	WITHOUT  shift 350
	WORK  shift 351
	WRAPPER  shift 352
	WRITE  shift 353
	XML_P  shift 354
	XMLATTRIBUTES  shift 410
	XMLCONCAT  shift 411
	XMLELEMENT  shift 412
	XMLEXISTS  shift 413
	XMLFOREST  shift 414
	XMLNAMESPACES  shift 415
	XMLPARSE  shift 416
	XMLPI  shift 417
	XMLROOT  shift 418
	XMLSERIALIZE  shift 419
	XMLTABLE  shift 420
	YEAR_P  shift 355
	YES_P  shift 356
	ZONE  shift 357
	IDENT  shift 25
	.  error

	unreserved_keyword  goto 26
	col_name_keyword  goto 27
	qualified_name  goto 23
	ColId  goto 24

10: shift/reduce conflict (shift 422(0), red'n 143(0)) on RECURSIVE
state 10
	with_clause:  WITH.opt_recursive cte_list 
	opt_recursive: .    (143)

	RECURSIVE  shift 422
	.  reduce 143 (src line 1125)

	opt_recursive  goto 421

state 11
	simple_select:  SELECT.select_pos opt_all_distinct opt_target_list opt_from_clause where_clause group_clause having_clause 
	select_pos: .    (27)

	.  reduce 27 (src line 416)

	select_pos  goto 423

state 12
	stmt_list:  stmt_list ';'.stmt 
	stmt_list:  stmt_list ';'.    (5)

	SELECT  shift 11
	TABLE  shift 9
	VALUES  shift 8
	WITH  shift 10
	.  reduce 5 (src line 259)

	stmt  goto 424
	SelectStmt  goto 4
	simple_select  goto 7
	base_select  goto 5
	with_clause  goto 6

state 13
	SelectStmt:  base_select setop_tail.    (7)

	.  reduce 7 (src line 277)


state 14
	setop_tail:  setop_op.SelectStmt 

	SELECT  shift 11
	TABLE  shift 9
	VALUES  shift 8
	WITH  shift 10
	.  error

	SelectStmt  goto 425
	simple_select  goto 7
	base_select  goto 5
	with_clause  goto 6

state 15
	setop_op:  UNION.    (17)
	setop_op:  UNION.ALL 
	setop_op:  UNION.DISTINCT 

	ALL  shift 426
	DISTINCT  shift 427
	.  reduce 17 (src line 370)


state 16
	setop_op:  INTERSECT.    (20)
	setop_op:  INTERSECT.ALL 

	ALL  shift 428
	.  reduce 20 (src line 383)


state 17
	setop_op:  EXCEPT.    (22)
	setop_op:  EXCEPT.ALL 

	ALL  shift 429
	.  reduce 22 (src line 391)


state 18
	SelectStmt:  with_clause base_select.setop_tail 
	setop_tail: .    (15)

	EXCEPT  shift 17
	INTERSECT  shift 16
	UNION  shift 15
	.  reduce 15 (src line 358)

	setop_tail  goto 430
	setop_op  goto 14

state 19
	base_select:  simple_select opt_sort_clause.opt_select_limit 
	opt_select_limit: .    (40)

	FETCH  shift 436
	LIMIT  shift 435
	OFFSET  shift 437
	.  reduce 40 (src line 518)

	opt_select_limit  goto 431
	select_limit  goto 432
	limit_clause  goto 433
	offset_clause  goto 434

state 20
	opt_sort_clause:  ORDER.BY sort_by_list 

	BY  shift 438
	.  error


state 21
	base_select:  VALUES VALUES_row.VALUES_rows_tail opt_sort_clause opt_select_limit 
	VALUES_rows_tail: .    (13)

	.  reduce 13 (src line 349)

	VALUES_rows_tail  goto 439

state 22
	VALUES_row:  '('.expr_list ')' 

	ABORT_P  shift 28
	ABSENT  shift 29
	ABSOLUTE_P  shift 30
	ACCESS  shift 31
	ACTION  shift 32
	ADD_P  shift 33
	ADMIN  shift 34
	AFTER  shift 35
	AGGREGATE  shift 36
	ALSO  shift 37
	ALTER  shift 38
	ALWAYS  shift 39
	ASENSITIVE  shift 40
	ASSERTION  shift 41
	ASSIGNMENT  shift 42
	AT  shift 43
	ATOMIC  shift 44
	ATTACH  shift 45
	ATTRIBUTE  shift 46
	BACKWARD  shift 47
	BEFORE  shift 48
	BEGIN_P  shift 49
	BETWEEN  shift 358
	BIGINT  shift 359
	BIT  shift 360
	BOOLEAN_P  shift 361
	BREADTH  shift 50
	BY  shift 51
	CACHE  shift 52
	CALL  shift 53
	CALLED  shift 54
	CASCADE  shift 55
	CASCADED  shift 56
	CATALOG_P  shift 57
	CHAIN  shift 58
	CHAR_P  shift 362
	CHARACTER  shift 363
	CHARACTERISTICS  shift 59
	CHECKPOINT  shift 60
	CLASS  shift 61
	CLOSE  shift 62
	CLUSTER  shift 63
	COALESCE  shift 364
	COLUMNS  shift 64
	COMMENT  shift 65
	COMMENTS  shift 66
	COMMIT  shift 67
	COMMITTED  shift 68
	COMPRESSION  shift 69
	CONDITIONAL  shift 70
	CONFIGURATION  shift 71
	CONFLICT  shift 72
	CONNECTION  shift 73
	CONSTRAINTS  shift 74
	CONTENT_P  shift 75
	CONTINUE_P  shift 76
	CONVERSION_P  shift 77
	COPY  shift 78
	COST  shift 79
	CSV  shift 80
	CUBE  shift 81
	CURRENT_P  shift 82
	CURSOR  shift 83
	CYCLE  shift 84
	DATA_P  shift 85
	DATABASE  shift 86
	DAY_P  shift 87
	DEALLOCATE  shift 88
	DEC  shift 365
	DECIMAL_P  shift 366
	DECLARE  shift 89
	DEFAULTS  shift 90
	DEFERRED  shift 91
	DEFINER  shift 92
	DELETE_P  shift 93
	DELIMITER  shift 94
	DELIMITERS  shift 95
	DEPENDS  shift 96
	DEPTH  shift 97
	DETACH  shift 98
	DICTIONARY  shift 99
	DISABLE_P  shift 100
	DISCARD  shift 101
	DOCUMENT_P  shift 102
	DOMAIN_P  shift 103
	DOUBLE_P  shift 104
	DROP  shift 105
	EACH  shift 106
	EMPTY_P  shift 107
	ENABLE_P  shift 108
	ENCODING  shift 109
	ENCRYPTED  shift 110
	ENFORCED  shift 111
	ENUM_P  shift 112
	ERROR_P  shift 113
	ESCAPE  shift 114
	EVENT  shift 115
	EXCLUDE  shift 116
	EXCLUDING  shift 117
	EXCLUSIVE  shift 118
	EXECUTE  shift 119
	EXISTS  shift 367
	EXPLAIN  shift 120
	EXPRESSION  shift 121
	EXTENSION  shift 122
	EXTERNAL  shift 123
	EXTRACT  shift 368
	FALSE_P  shift 451
	FAMILY  shift 124
	FILTER  shift 125
	FINALIZE  shift 126
	FIRST_P  shift 127
	FLOAT_P  shift 369
	FOLLOWING  shift 128
	FORCE  shift 129
	FORMAT  shift 130
	FORWARD  shift 131
	FUNCTION  shift 132
	FUNCTIONS  shift 133
	GENERATED  shift 134
	GLOBAL  shift 135
	GRANTED  shift 136
	GREATEST  shift 370
	GROUPING  shift 371
	GROUPS  shift 137
	HANDLER  shift 138
	HEADER_P  shift 139
	HOLD  shift 140
	HOUR_P  shift 141
	IDENTITY_P  shift 142
	IF_P  shift 143
	IMMEDIATE  shift 144
	IMMUTABLE  shift 145
	IMPLICIT_P  shift 146
	IMPORT_P  shift 147
	INCLUDE  shift 148
	INCLUDING  shift 149
	INCREMENT  shift 150
	INDENT  shift 151
	INDEX  shift 152
	INDEXES  shift 153
	INHERIT  shift 154
	INHERITS  shift 155
	INLINE_P  shift 156
	INOUT  shift 372
	INPUT_P  shift 157
	INSENSITIVE  shift 158
	INSERT  shift 159
	INSTEAD  shift 160
	INT_P  shift 373
	INTEGER  shift 374
	INTERVAL  shift 375
	INVOKER  shift 161
	ISOLATION  shift 162
	JSON  shift 376
	JSON_ARRAY  shift 377
	JSON_ARRAYAGG  shift 378
	JSON_EXISTS  shift 379
	JSON_OBJECT  shift 380
	JSON_OBJECTAGG  shift 381
	JSON_QUERY  shift 382
	JSON_SCALAR  shift 383
	JSON_SERIALIZE  shift 384
	JSON_TABLE  shift 385
	JSON_VALUE  shift 386
	KEEP  shift 163
	KEY  shift 164
	KEYS  shift 165
	LABEL  shift 166
	LANGUAGE  shift 167
	LARGE_P  shift 168
	LAST_P  shift 169
	LEAKPROOF  shift 170
	LEAST  shift 387
	LEVEL  shift 171
	LISTEN  shift 172
	LOAD  shift 173
	LOCAL  shift 174
	LOCATION  shift 175
	LOCK_P  shift 176
	LOCKED  shift 177
	LOGGED  shift 178
	MAPPING  shift 179
	MATCH  shift 180
	MATCHED  shift 181
	MATERIALIZED  shift 182
	MAXVALUE  shift 183
	MERGE  shift 184
	MERGE_ACTION  shift 388
	METHOD  shift 185
	MINUTE_P  shift 186
	MINVALUE  shift 187
	MODE  shift 188
	MONTH_P  shift 189
	MOVE  shift 190
	NAME_P  shift 191
	NAMES  shift 192
	NATIONAL  shift 389
	NCHAR  shift 390
	NESTED  shift 193
	NEW  shift 194
	NEXT  shift 195
	NFC  shift 196
	NFD  shift 197
	NFKC  shift 198
	NFKD  shift 199
	NO  shift 200
	NONE  shift 391
	NORMALIZE  shift 392
	NORMALIZED  shift 201
	NOT  shift 443
	NOTHING  shift 202
	NOTIFY  shift 203
	NOWAIT  shift 204
	NULL_P  shift 452
	NULLIF  shift 393
	NULLS_P  shift 205
	NUMERIC  shift 394
	OBJECT_P  shift 206
	OBJECTS_P  shift 207
	OF  shift 208
	OFF  shift 209
	OIDS  shift 210
	OLD  shift 211
	OMIT  shift 212
	OPERATOR  shift 213
	OPTION  shift 214
	OPTIONS  shift 215
	ORDINALITY  shift 216
	OTHERS  shift 217
	OUT_P  shift 395
	OVER  shift 218
	OVERLAY  shift 396
	OVERRIDING  shift 219
	OWNED  shift 220
	OWNER  shift 221
	PARALLEL  shift 222
	PARAMETER  shift 223
	PARSER  shift 224
	PARTIAL  shift 225
	PARTITION  shift 226
	PASSING  shift 227
	PASSWORD  shift 228
	PATH  shift 229
	PERIOD  shift 230
	PLAN  shift 231
	PLANS  shift 232
	POLICY  shift 233
	POSITION  shift 397
	PRECEDING  shift 234
	PRECISION  shift 398
	PREPARE  shift 235
	PREPARED  shift 236
	PRESERVE  shift 237
	PRIOR  shift 238
	PRIVILEGES  shift 239
	PROCEDURAL  shift 240
	PROCEDURE  shift 241
	PROCEDURES  shift 242
	PROGRAM  shift 243
	PUBLICATION  shift 244
	QUOTE  shift 245
	QUOTES  shift 246
	RANGE  shift 247
	READ  shift 248
	REAL  shift 399
	REASSIGN  shift 249
	RECURSIVE  shift 250
	REF_P  shift 251
	REFERENCING  shift 252
	REFRESH  shift 253
	REINDEX  shift 254
	RELATIVE_P  shift 255
	RELEASE  shift 256
	RENAME  shift 257
	REPEATABLE  shift 258
	REPLACE  shift 259
	REPLICA  shift 260
	RESET  shift 261
	RESTART  shift 262
	RESTRICT  shift 263
	RETURN  shift 264
	RETURNS  shift 265
	REVOKE  shift 266
	ROLE  shift 267
	ROLLBACK  shift 268
	ROLLUP  shift 269
	ROUTINE  shift 270
	ROUTINES  shift 271
	ROW  shift 400
	ROWS  shift 272
	RULE  shift 273
	SAVEPOINT  shift 274
	SCALAR  shift 275
	SCHEMA  shift 276
	SCHEMAS  shift 277
	SCROLL  shift 278
	SEARCH  shift 279
	SECOND_P  shift 280
	SECURITY  shift 281
	SEQUENCE  shift 282
	SEQUENCES  shift 283
	SERIALIZABLE  shift 284
	SERVER  shift 285
	SESSION  shift 286
	SET  shift 287
	SETOF  shift 401
	SETS  shift 288
	SHARE  shift 289
	SHOW  shift 290
	SIMPLE  shift 291
	SKIP  shift 292
	SMALLINT  shift 402
	SNAPSHOT  shift 293
	SOURCE  shift 294
	SQL_P  shift 295
	STABLE  shift 296
	STANDALONE_P  shift 297
	START  shift 298
	STATEMENT  shift 299
	STATISTICS  shift 300
	STDIN  shift 301
	STDOUT  shift 302
	STORAGE  shift 303
	STORED  shift 304
	STRICT_P  shift 305
	STRING_P  shift 306
	STRIP_P  shift 307
	SUBSCRIPTION  shift 308
	SUBSTRING  shift 403
	SUPPORT  shift 309
	SYSID  shift 310
	SYSTEM_P  shift 311
	TABLES  shift 312
	TABLESPACE  shift 313
	TARGET  shift 314
	TEMP  shift 315
	TEMPLATE  shift 316
	TEMPORARY  shift 317
	TEXT_P  shift 318
	TIES  shift 319
	TIME  shift 404
	TIMESTAMP  shift 405
	TRANSACTION  shift 320
	TRANSFORM  shift 321
	TREAT  shift 406
	TRIGGER  shift 322
	TRIM  shift 407
	TRUE_P  shift 450
	TRUNCATE  shift 323
	TRUSTED  shift 324
	TYPE_P  shift 325
	TYPES_P  shift 326
	UESCAPE  shift 327
	UNBOUNDED  shift 328
	UNCOMMITTED  shift 329
	UNCONDITIONAL  shift 330
	UNENCRYPTED  shift 331
	UNKNOWN  shift 332
	UNLISTEN  shift 333
	UNLOGGED  shift 334
	UNTIL  shift 335
	UPDATE  shift 336
	VACUUM  shift 337
	VALID  shift 338
	VALIDATE  shift 339
	VALIDATOR  shift 340
	VALUE_P  shift 341
	VALUES  shift 408
	VARCHAR  shift 409
	VARYING  shift 342
	VERSION_P  shift 343
	VIEW  shift 344
	VIEWS  shift 345
	VIRTUAL  shift 346
	VOLATILE  shift 347
	WHITESPACE_P  shift 348
	WITHIN  shift 349
	WITHOUT  shift 350
	WORK  shift 351
	WRAPPER  shift 352
	WRITE  shift 353
	XML_P  shift 354
	XMLATTRIBUTES  shift 410
	XMLCONCAT  shift 411
	XMLELEMENT  shift 412
	XMLEXISTS  shift 413
	XMLFOREST  shift 414
	XMLNAMESPACES  shift 415
	XMLPARSE  shift 416
	XMLPI  shift 417
	XMLROOT  shift 418
	XMLSERIALIZE  shift 419
	XMLTABLE  shift 420
	YEAR_P  shift 355
	YES_P  shift 356
	ZONE  shift 357
	IDENT  shift 25
	FCONST  shift 448
	SCONST  shift 449
	ICONST  shift 447
	PARAM  shift 453
	'+'  shift 445
	'-'  shift 444
	'('  shift 446
	.  error

	unreserved_keyword  goto 26
	col_name_keyword  goto 27
	qualified_name  goto 454
	a_expr  goto 441
	c_expr  goto 442
	expr_list  goto 440
	ColId  goto 24

state 23
	base_select:  TABLE qualified_name.opt_sort_clause opt_select_limit 
	qualified_name:  qualified_name.'.' ColId 
	opt_sort_clause: .    (29)

	ORDER  shift 20
	'.'  shift 456
	.  reduce 29 (src line 458)

	opt_sort_clause  goto 455

state 24
	qualified_name:  ColId.    (159)

	.  reduce 159 (src line 1206)


state 25
	ColId:  IDENT.    (187)

	.  reduce 187 (src line 1330)


state 26
	ColId:  unreserved_keyword.    (188)

	.  reduce 188 (src line 1335)


state 27
	ColId:  col_name_keyword.    (189)

	.  reduce 189 (src line 1339)


state 28
	unreserved_keyword:  ABORT_P.    (196)

	.  reduce 196 (src line 1374)


state 29
	unreserved_keyword:  ABSENT.    (197)

	.  reduce 197 (src line 1376)


state 30
	unreserved_keyword:  ABSOLUTE_P.    (198)

	.  reduce 198 (src line 1377)


state 31
	unreserved_keyword:  ACCESS.    (199)

	.  reduce 199 (src line 1378)


state 32
	unreserved_keyword:  ACTION.    (200)

	.  reduce 200 (src line 1379)


state 33
	unreserved_keyword:  ADD_P.    (201)

	.  reduce 201 (src line 1380)


state 34
	unreserved_keyword:  ADMIN.    (202)

	.  reduce 202 (src line 1381)


state 35
	unreserved_keyword:  AFTER.    (203)

	.  reduce 203 (src line 1382)


state 36
	unreserved_keyword:  AGGREGATE.    (204)

	.  reduce 204 (src line 1383)


state 37
	unreserved_keyword:  ALSO.    (205)

	.  reduce 205 (src line 1384)


state 38
	unreserved_keyword:  ALTER.    (206)

	.  reduce 206 (src line 1385)


state 39
	unreserved_keyword:  ALWAYS.    (207)

	.  reduce 207 (src line 1386)


state 40
	unreserved_keyword:  ASENSITIVE.    (208)

	.  reduce 208 (src line 1387)


state 41
	unreserved_keyword:  ASSERTION.    (209)

	.  reduce 209 (src line 1388)


state 42
	unreserved_keyword:  ASSIGNMENT.    (210)

	.  reduce 210 (src line 1389)


state 43
	unreserved_keyword:  AT.    (211)

	.  reduce 211 (src line 1390)


state 44
	unreserved_keyword:  ATOMIC.    (212)

	.  reduce 212 (src line 1391)


state 45
	unreserved_keyword:  ATTACH.    (213)

	.  reduce 213 (src line 1392)


state 46
	unreserved_keyword:  ATTRIBUTE.    (214)

	.  reduce 214 (src line 1393)


state 47
	unreserved_keyword:  BACKWARD.    (215)

	.  reduce 215 (src line 1394)


state 48
	unreserved_keyword:  BEFORE.    (216)

	.  reduce 216 (src line 1395)


state 49
	unreserved_keyword:  BEGIN_P.    (217)

	.  reduce 217 (src line 1396)


state 50
	unreserved_keyword:  BREADTH.    (218)

	.  reduce 218 (src line 1397)


state 51
	unreserved_keyword:  BY.    (219)

	.  reduce 219 (src line 1398)


state 52
	unreserved_keyword:  CACHE.    (220)

	.  reduce 220 (src line 1399)


state 53
	unreserved_keyword:  CALL.    (221)

	.  reduce 221 (src line 1400)


state 54
	unreserved_keyword:  CALLED.    (222)

	.  reduce 222 (src line 1401)


state 55
	unreserved_keyword:  CASCADE.    (223)

	.  reduce 223 (src line 1402)


state 56
	unreserved_keyword:  CASCADED.    (224)

	.  reduce 224 (src line 1403)


state 57
	unreserved_keyword:  CATALOG_P.    (225)

	.  reduce 225 (src line 1404)


state 58
	unreserved_keyword:  CHAIN.    (226)

	.  reduce 226 (src line 1405)


state 59
	unreserved_keyword:  CHARACTERISTICS.    (227)

	.  reduce 227 (src line 1406)


state 60
	unreserved_keyword:  CHECKPOINT.    (228)

	.  reduce 228 (src line 1407)


state 61
	unreserved_keyword:  CLASS.    (229)

	.  reduce 229 (src line 1408)


state 62
	unreserved_keyword:  CLOSE.    (230)

	.  reduce 230 (src line 1409)


state 63
	unreserved_keyword:  CLUSTER.    (231)

	.  reduce 231 (src line 1410)


state 64
	unreserved_keyword:  COLUMNS.    (232)

	.  reduce 232 (src line 1411)


state 65
	unreserved_keyword:  COMMENT.    (233)

	.  reduce 233 (src line 1412)


state 66
	unreserved_keyword:  COMMENTS.    (234)

	.  reduce 234 (src line 1413)


state 67
	unreserved_keyword:  COMMIT.    (235)

	.  reduce 235 (src line 1414)


state 68
	unreserved_keyword:  COMMITTED.    (236)

	.  reduce 236 (src line 1415)


state 69
	unreserved_keyword:  COMPRESSION.    (237)

	.  reduce 237 (src line 1416)


state 70
	unreserved_keyword:  CONDITIONAL.    (238)

	.  reduce 238 (src line 1417)


state 71
	unreserved_keyword:  CONFIGURATION.    (239)

	.  reduce 239 (src line 1418)


state 72
	unreserved_keyword:  CONFLICT.    (240)

	.  reduce 240 (src line 1419)


state 73
	unreserved_keyword:  CONNECTION.    (241)

	.  reduce 241 (src line 1420)


state 74
	unreserved_keyword:  CONSTRAINTS.    (242)

	.  reduce 242 (src line 1421)


state 75
	unreserved_keyword:  CONTENT_P.    (243)

	.  reduce 243 (src line 1422)


state 76
	unreserved_keyword:  CONTINUE_P.    (244)

	.  reduce 244 (src line 1423)


state 77
	unreserved_keyword:  CONVERSION_P.    (245)

	.  reduce 245 (src line 1424)


state 78
	unreserved_keyword:  COPY.    (246)

	.  reduce 246 (src line 1425)


state 79
	unreserved_keyword:  COST.    (247)

	.  reduce 247 (src line 1426)


state 80
	unreserved_keyword:  CSV.    (248)

	.  reduce 248 (src line 1427)

